<resources>
    <string name="app_name">DBroker</string>
    <string name="author">spark.zheng@outlook.com</string>
    <string name="description">Direct Broking Mobile Client</string>
    <string name="privacy">Privacy Policy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Account Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="header_bid">Bid</string>
    <string name="header_ask">Ask</string>
    <string name="header_tread">Tread</string>
    <string name="refresh_button">Refresh</string>
    <string name="image_description">Stock Trends</string>
    <string name="timer_interval">300000</string>
    <string name="menu_selected_stocks">Selected Stocks</string>
    <string name="menu_stocks_info">Stocks Info"</string>
    <string name="menu_stock_search">Search Stocks"</string>
    <string name="menu_stock_trade_info">Stocks Trade Info"</string>
    <string name="menu_system_parameters">System Parameters"</string>
    <string name="menu_display_mode">NightMode"</string>
    <string name="market_open_time">09:45</string>
    <string name="market_close_time">17:15</string>

    <string name="user_info_portfolio">Portfolio</string>
    <string name="user_info_orders">Orders</string>
    <string name="user_info_account">Account</string>
    <string name="user_info_account_withdraw">Withdraw Amount: </string>
    <string name="user_info_trade_records">Trade\nRecords</string>


    <string name="system_info_enable">Enable</string>
    <string name="system_info_disable">Disable</string>

    <string name="selected_stocks">Selected</string>
    <string name="rank_value">Value</string>
    <string name="rank_change">Change</string>
    <string name="rank_captial">Captial</string>
    <string name="stock_code">Stock Code : </string>
    <string name="date">Date : </string>
    <string name="action">Action : </string>
    <string name="quantity">Quantity : </string>
    <string name="price">Price : </string>
    <string name="value">Value : </string>
    <string name="settlement">Settlement : </string>
    <string name="due_date">Due Date : </string>
    <string name="status">Status : </string>

    <string name="direct_broking">DirectBroking</string>
    <string name="nzx">NZX</string>

    <string name="market_start_time">09:30</string>
    <string name="market_end_time">17:15</string>

    
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
