<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_code"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsStockCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settlement"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsSettlement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradeRecordsStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="viewEnd" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>