<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userinfo.UserInfoManagerActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiPortfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_portfolio" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_account" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpUserInfo"
        android:layout_width="381dp"
        android:layout_height="638dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlUserInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>